--- a/apps/templates/home/api-view.html
+++ b/apps/templates/home/api-view.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 
-{% block title %} Dashboard {% endblock title %}
+{% block title %} API sample {% endblock title %}
 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -9,262 +9,235 @@
 
     <div class="container-fluid py-4">
 
-      <div class="row">
+    <div class="row mt-4">
 
-        <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-12">
-                  <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">
-                        API Sample - GET
-                    </p>
-                    <h5 class="font-weight-bolder mb-0">
-                      <span class="text-success text-sm font-weight-bolder">
-                        @Todo
-                      </span>
-                    </h5>
+      <div class="col-lg-12 mb-lg-0 mb-4">
+        <div class="card">
+          <div class="card-body p-3">
+            <div class="row">
+              <div class="col-lg-8">
+                <div class="d-flex flex-column h-100">
+                  <p class="mb-1 pt-2 text-bold">How it works</p>
+                  <h5 class="font-weight-bolder">Generated API</h5>
+                  <p class="mb-3">
+                    This codebase can be used to generate secure APIs using DRF.
+                    Steps to generate a new service:
+                    <ul>
+                      <li><strong>Step #1</strong> - Edit "apps/models.py" and add a new model</li>
+                      <li><strong>Step #2</strong> - Migrate the database (usual steps)</li>
+                      <li><strong>Step #3</strong> - Execute "python manage.py generate-api"</li>
+                      <li><strong>Step #4</strong> - Enable model in "core/settings.py" - Section "API_GENERATOR"</li>
+                      <li><strong>Step #5</strong> - Access the api "http://localhost:8000/api/MODEL_NAME/"</li>
+                    </ul>
+                  </p>
+                  <p>
+                    Import the
+                    <a class="text-primary" target="_blank" href="https://github.com/app-generator/django-soft-ui-dashboard/tree/master/media">POSTMAN Sample collection <i class="fa fa-download"></i></a>
+                    and access the
+                    <a target="_blank" class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="/api/books/">
+                      Generated API
+                      <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
+                    </a>
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 ms-auto text-center mt-5 mt-lg-0">
+                <div class="bg-gradient-primary border-radius-lg h-100">
+                  <div class="position-relative d-flex align-items-center justify-content-center h-100">
+                    <img class="w-100 position-relative z-index-2 pt-4" src="{{ ASSETS_ROOT }}/img/illustrations/rocket-white.png" alt="rocket">
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-    </div>
-
-      <div class="row mt-4">
-
-        <div class="col-lg-6 mb-lg-0 mb-4">
-          <div class="card">
-            <div class="card-body p-3">
-
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">
-                        API Sample
-                    </p>
-                    <h5 class="font-weight-bolder">
-                        Create BOOK
-                    </h5>
-                    <p class="mb-5">
-                        @Todo - simple form
-                    </p>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-6 mb-lg-0 mb-4">
-            <div class="card">
-              <div class="card-body p-3">
-  
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="d-flex flex-column h-100">
-                      <p class="mb-1 pt-2 text-bold">
-                          API Sample
-                      </p>
-                      <h5 class="font-weight-bolder">
-                          Update BOOK
-                      </h5>
-                      <p class="mb-5">
-                          @Todo - simple form
-                      </p>
-                    </div>
-                  </div>
-  
-                </div>
-              </div>
-            </div>
-        </div>
-  
       </div>
 
-      {% include "includes/footer.html" %}
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-12 mt-4">
+        <div class="card">
+          <div class="card-header text-center pb-0 px-3">
+            <h6 class="mb-0">
+                <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;" data-bs-toggle="modal" data-bs-target="#createModal">
+                    <i class="fas fa-plus text-success me-2" aria-hidden="true"></i>Add Item
+                </a>
+                <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;" data-bs-toggle="modal" data-bs-target="#editModal">
+                    <i class="fas fa-plus text-success me-2" aria-hidden="true"></i>Edit Item
+                </a>
+            </h6>
+          </div>
+          <div class="card-body pt-4 p-3">
+            <ul class="list-group">
+              <li class="list-group-item border-0 d-flex p-4 mb-2 bg-gray-100 border-radius-lg">
+                <div class="d-flex flex-column">
+                  <span id="book-container" >Empty</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
     </div>
 
+    {% include "includes/footer.html" %}
+
+  </div>
+
+    <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form id="create-form">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+              <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name">Title</label>
+                    <input id="title" class="form-control" name="title">
+                </div>
+                  <p id="create-error" class=" text-danger fw-bold"></p>
+              </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <input type="submit" class="btn btn-primary" value="Save changes">
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form id="edit-form">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Edit</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+              <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name">Id</label>
+                    <input id="id" class="form-control" name="id">
+                    <label for="name">Title</label>
+                    <input id="title" class="form-control" name="title">
+                </div>
+                  <p id="edit-error" class=" text-danger fw-bold"></p>
+              </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <input type="submit" class="btn btn-primary" value="Save changes">
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
 {% block javascripts %}
 
-  <script src="{{ ASSETS_ROOT }}/js/plugins/chartjs.min.js"></script>
   <script>
-    var ctx = document.getElementById("chart-bars").getContext("2d");
 
-    new Chart(ctx, {
-      type: "bar",
-      data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-        datasets: [{
-          label: "Sales",
-          tension: 0.4,
-          borderWidth: 0,
-          borderRadius: 4,
-          borderSkipped: false,
-          backgroundColor: "#fff",
-          data: [450, 200, 100, 220, 500, 100, 400, 230, 500],
-          maxBarThickness: 6
-        }, ],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
-        },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false,
-            },
-            ticks: {
-              suggestedMin: 0,
-              suggestedMax: 500,
-              beginAtZero: true,
-              padding: 15,
-              font: {
-                size: 14,
-                family: "Open Sans",
-                style: 'normal',
-                lineHeight: 2
-              },
-              color: "#fff"
-            },
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false
-            },
-            ticks: {
-              display: false
-            },
-          },
-        },
-      },
-    });
+    let token = ''
+    const formData = new FormData()
+    formData.append('username','saj')
+    formData.append('password','sajad9460')
 
+    // login
+    fetch('/login/jwt/',{
+        method: 'POST',
+        body: formData
+    })
+        .then((response) => {
+            if(!response.ok)
+                return response.text().then(text => { throw new Error(text) })
+            else
+                return response.json()
+        })
+        .then((res) => {
+            token = res.data
+            console.log(res)
+        })
+        .catch((err) => {
+            console.log(err)
+        })
 
-    var ctx2 = document.getElementById("chart-line").getContext("2d");
+    // fetch data
+    fetch('/api/books/',{
+        method: 'GET'
+    })
+        .then((response) => {
+            if(!response.ok)
+                return response.text().then(text => { throw new Error(text) })
+            else
+                return response.json()
+        })
+        .then((res) => {
+            const dataContainer = document.getElementById('book-container')
+            dataContainer.textContent = ''
+            console.log(res)
 
-    var gradientStroke1 = ctx2.createLinearGradient(0, 230, 0, 50);
+            res.data.map((d) => {
+                Object.keys(d).map((key) => {
+                    dataContainer.textContent += key + ": " + d[key] + ", "
+                })
+            })
+        })
+        .catch((err) => {
+            console.log(err)
+        })
 
-    gradientStroke1.addColorStop(1, 'rgba(203,12,159,0.2)');
-    gradientStroke1.addColorStop(0.2, 'rgba(72,72,176,0.0)');
-    gradientStroke1.addColorStop(0, 'rgba(203,12,159,0)'); //purple colors
+    // create request
+    document.getElementById('create-form').onsubmit = (e) => {
+        e.preventDefault()
+        fetch('/api/books/',{
+            method: 'POST',
+            body: new FormData(e.target),
+            headers: {"Authorization": `${token}`}
+        })
+            .then((response) => {
+                if(!response.ok)
+                    return response.text().then(text => { throw new Error(text) })
+                else
+                    return response.json()
+            })
+            .then((res) => {
+                console.log(res)
+                location.reload()
+            })
+            .catch((err) => {
+                document.getElementById('create-error').textContent = err
+            })
+    }
 
-    var gradientStroke2 = ctx2.createLinearGradient(0, 230, 0, 50);
+    document.getElementById('edit-form').onsubmit = (e) => {
+            e.preventDefault()
+            const formData = new FormData(e.target)
 
-    gradientStroke2.addColorStop(1, 'rgba(20,23,39,0.2)');
-    gradientStroke2.addColorStop(0.2, 'rgba(72,72,176,0.0)');
-    gradientStroke2.addColorStop(0, 'rgba(20,23,39,0)'); //purple colors
-
-    new Chart(ctx2, {
-      type: "line",
-      data: {
-        labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
-        datasets: [{
-            label: "Mobile apps",
-            tension: 0.4,
-            borderWidth: 0,
-            pointRadius: 0,
-            borderColor: "#cb0c9f",
-            borderWidth: 3,
-            backgroundColor: gradientStroke1,
-            fill: true,
-            data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
-            maxBarThickness: 6
-
-          },
-          {
-            label: "Websites",
-            tension: 0.4,
-            borderWidth: 0,
-            pointRadius: 0,
-            borderColor: "#575f9a",
-            borderWidth: 3,
-            backgroundColor: gradientStroke2,
-            fill: true,
-            data: [30, 90, 40, 140, 290, 290, 340, 230, 400],
-            maxBarThickness: 6
-          },
-        ],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            display: false,
-          }
-        },
-        interaction: {
-          intersect: false,
-          mode: 'index',
-        },
-        scales: {
-          y: {
-            grid: {
-              drawBorder: false,
-              display: true,
-              drawOnChartArea: true,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              padding: 10,
-              color: '#b2b9bf',
-              font: {
-                size: 11,
-                family: "Open Sans",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-          x: {
-            grid: {
-              drawBorder: false,
-              display: false,
-              drawOnChartArea: false,
-              drawTicks: false,
-              borderDash: [5, 5]
-            },
-            ticks: {
-              display: true,
-              color: '#b2b9bf',
-              padding: 20,
-              font: {
-                size: 11,
-                family: "Open Sans",
-                style: 'normal',
-                lineHeight: 2
-              },
-            }
-          },
-        },
-      },
-    });
+            fetch(`/api/books/${formData.get('id')}/`,{
+                method: 'PUT',
+                body: formData,
+                headers: {"Authorization": `${token}`}
+            })
+                .then((response) => {
+                    if(!response.ok)
+                        return response.text().then(text => { throw new Error(text) })
+                    else
+                        return response.json()
+                })
+                .then((res) => {
+                    console.log(res)
+                    location.reload()
+                })
+                .catch((err) => {
+                    document.getElementById('edit-error').textContent = err
+                })
+        }
   </script>
 
 {% endblock javascripts %}
