change default api username and password

--- a/apps/templates/home/api-view.html
+++ b/apps/templates/home/api-view.html
@@ -145,8 +145,8 @@
 
     let token = ''
     const formData = new FormData()
-    formData.append('username','saj')
-    formData.append('password','sajad9460')
+    formData.append('username','apiadmin')
+    formData.append('password','apiadmin')
 
     // login
     fetch('/login/jwt/',{
