--- a/apps/templates/home/api-view.html
+++ b/apps/templates/home/api-view.html
@@ -20,19 +20,19 @@
                   <p class="mb-1 pt-2 text-bold">How it works</p>
                   <h5 class="font-weight-bolder">Generated API</h5>
                   <p class="mb-3">
-                    This codebase can be used to generate secure APIs using DRF.
+                    This codebase can be used to generate secure APIs using Flask-RextX.
                     Steps to generate a new service:
                     <ul>
                       <li><strong>Step #1</strong> - Edit "apps/models.py" and add a new model</li>
                       <li><strong>Step #2</strong> - Migrate the database (usual steps)</li>
-                      <li><strong>Step #3</strong> - Execute "python manage.py generate-api"</li>
-                      <li><strong>Step #4</strong> - Enable model in "core/settings.py" - Section "API_GENERATOR"</li>
+                      <li><strong>Step #3</strong> - Execute "flask get_api"</li>
+                      <li><strong>Step #4</strong> - Enable model in "apps/config.py" - Section "API_GENERATOR"</li>
                       <li><strong>Step #5</strong> - Access the api "http://localhost:8000/api/MODEL_NAME/"</li>
                     </ul>
                   </p>
                   <p>
                     Import the
-                    <a class="text-primary" target="_blank" href="https://github.com/app-generator/django-soft-ui-dashboard/tree/master/media">POSTMAN Sample collection <i class="fa fa-download"></i></a>
+                    <a class="text-primary" target="_blank" href="https://github.com/app-generator/flask-soft-ui-dashboard/tree/master/media">POSTMAN Sample collection <i class="fa fa-download"></i></a>
                     and access the
                     <a target="_blank" class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="/api/books/">
                       Generated API
